# python-blazarclient

./: lower-constraints.txt  openstack-openrc-dev-openstack-uc.sh  openstack-openrc-dev-uc.sh  openstack-openrc-uc.sh  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
blazarclient/: command.py  exception.py  shell.py  utils.py
blazarclient/tests/: test_command.py
blazarclient/tests/v1/shell_commands/: test_floatingips.py  test_hosts.py  test_leases.py  test_networks.py
blazarclient/v1/: client.py  devices.py  hosts.py  leases.py  networks.py  resources.py
blazarclient/v1/shell_commands/: devices.py  hosts.py  leases.py  networks.py  resources.py
contrib/horizon/blazardashboard/api/: blazar.py
