[metadata]
name = python-blazarclient
summary = Client for OpenStack Reservation Service
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    Framework :: Setuptools Plugin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home-page = https://launchpad.net/blazar

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    blazarclient

[entry_points]
console_scripts =
    blazar = blazarclient.shell:main

openstack.cli.extension =
    reservation = blazarclient.osc.plugin

openstack.reservation.v1 =
    reservation_floatingip_create = blazarclient.v1.shell_commands.floatingips:CreateFloatingIP
    reservation_floatingip_delete = blazarclient.v1.shell_commands.floatingips:DeleteFloatingIP
    reservation_floatingip_list = blazarclient.v1.shell_commands.floatingips:ListFloatingIPs
    reservation_floatingip_show = blazarclient.v1.shell_commands.floatingips:ShowFloatingIP
    reservation_host_create = blazarclient.v1.shell_commands.hosts:CreateHost
    reservation_host_delete = blazarclient.v1.shell_commands.hosts:DeleteHost
    reservation_host_list = blazarclient.v1.shell_commands.hosts:ListHosts
    reservation_host_set = blazarclient.v1.shell_commands.hosts:UpdateHost
    reservation_host_show = blazarclient.v1.shell_commands.hosts:ShowHost
    reservation_lease_create = blazarclient.v1.shell_commands.leases:CreateLeaseBase
    reservation_lease_delete = blazarclient.v1.shell_commands.leases:DeleteLease
    reservation_lease_list = blazarclient.v1.shell_commands.leases:ListLeases
    reservation_lease_set = blazarclient.v1.shell_commands.leases:UpdateLease
